--- a/workouts/templates/workouts/home.html
+++ b/workouts/templates/workouts/home.html
@@ -6,25 +6,32 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="bg-light">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-4">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="/">GymApp</a>
-            <div class="collapse navbar-collapse">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="{% url 'templates' %}">Templates</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{% url 'history' %}">History</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Logout</a></li>
-                </ul>
-            </div>
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-4">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="{% url 'home' %}">GymApp</a>
+        <div class="collapse navbar-collapse">
+            <ul class="navbar-nav ms-auto">
+                {% if user.is_authenticated %}
+                <li class="nav-item"><a class="nav-link" href="{% url 'templates' %}">Templates</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'history' %}">History</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Logout</a></li>
+                {% else %}
+                <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Login</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'register' %}">Register</a></li>
+                {% endif %}
+            </ul>
         </div>
-    </nav>
-
-    <div class="container text-center">
-        <h1 class="display-4">Welcome to GymApp!</h1>
-        <p class="lead">Track your workouts and reach your goals.</p>
-        <a href="{% url 'templates' %}" class="btn btn-primary btn-lg">View Templates</a>
     </div>
+</nav>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<div class="container text-center">
+    <h1 class="display-4">Welcome to GymApp!</h1>
+    <p class="lead">Track your workouts and reach your fitness goals.</p>
+    {% if user.is_authenticated %}
+    <a href="{% url 'templates' %}" class="btn btn-primary btn-lg">View Templates</a>
+    {% else %}
+    <a href="{% url 'login' %}" class="btn btn-primary btn-lg">Login to Start</a>
+    {% endif %}
+</div>
 </body>
 </html>
