--- a/workouts/templates/workouts/templates.html
+++ b/workouts/templates/workouts/templates.html
@@ -6,11 +6,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="bg-light">
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-4">
     <div class="container-fluid">
-        <a class="navbar-brand" href="{% url 'home' %}">GymApp</a>
+        <a class="navbar-brand" href="/">GymApp</a>
         <div class="collapse navbar-collapse">
             <ul class="navbar-nav ms-auto">
+                <li class="nav-item"><a class="nav-link" href="{% url 'templates' %}">Templates</a></li>
                 <li class="nav-item"><a class="nav-link" href="{% url 'history' %}">History</a></li>
                 <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Logout</a></li>
             </ul>
@@ -18,23 +20,25 @@
     </div>
 </nav>
 
-<div class="container">
-    <h2 class="mb-4 text-center">Workout Templates</h2>
+<div class="container py-5">
+    <h2 class="mb-4">Workout Templates</h2>
     <div class="row">
         {% for template in templates %}
-        <div class="col-md-4 mb-3">
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title">{{ template.name }}</h5>
-                    <p class="card-text">{{ template.description }}</p>
-                    <a href="{% url 'log_workout' template.id %}" class="btn btn-primary">Log Workout</a>
+            <div class="col-md-4">
+                <div class="card mb-4 shadow-sm">
+                    <div class="card-body">
+                        <h5 class="card-title">{{ template.name }}</h5>
+                        <p class="card-text">{{ template.description }}</p>
+                        <a href="{% url 'log_workout' template.id %}" class="btn btn-primary w-100">Log Workout</a>
+                    </div>
                 </div>
             </div>
-        </div>
         {% empty %}
-        <p class="text-center">No templates found.</p>
+            <p>No templates available yet.</p>
         {% endfor %}
     </div>
 </div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
