--- a/workouts/templates/workouts/history.html
+++ b/workouts/templates/workouts/history.html
@@ -6,10 +6,25 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="bg-light">
-    <div class="container py-5">
-        <h2 class="mb-4">Workout History</h2>
-        <table class="table table-striped table-hover">
-            <thead class="table-primary">
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-4">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="/">GymApp</a>
+        <div class="collapse navbar-collapse">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item"><a class="nav-link" href="{% url 'templates' %}">Templates</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'history' %}">History</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Logout</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
+<div class="container py-5">
+    <h2 class="mb-4">Workout History</h2>
+    {% if workouts %}
+        <table class="table table-striped">
+            <thead>
                 <tr>
                     <th>Date</th>
                     <th>Template</th>
@@ -18,22 +33,25 @@
             </thead>
             <tbody>
                 {% for workout in workouts %}
-                <tr>
-                    <td>{{ workout.date }}</td>
-                    <td>{{ workout.template.name }}</td>
-                    <td>
-                        {% for exercise in workout.loggedexercise_set.all %}
-                            {{ exercise.exercise.name }} ({{ exercise.reps }} reps, {{ exercise.weight }} kg)<br>
-                        {% endfor %}
-                    </td>
-                </tr>
-                {% empty %}
-                <tr><td colspan="3">No workouts logged yet.</td></tr>
+                    <tr>
+                        <td>{{ workout.date }}</td>
+                        <td>{{ workout.template.name }}</td>
+                        <td>
+                            <ul>
+                                {% for entry in workout.entries.all %}
+                                    <li>{{ entry.exercise.name }}: {{ entry.weight }}kg x {{ entry.reps }} reps</li>
+                                {% endfor %}
+                            </ul>
+                        </td>
+                    </tr>
                 {% endfor %}
             </tbody>
         </table>
-    </div>
+    {% else %}
+        <p>No workouts logged yet.</p>
+    {% endif %}
+</div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
