--- a/workouts/templates/workouts/home.html
+++ b/workouts/templates/workouts/home.html
@@ -7,15 +7,24 @@
 </head>
 <body class="bg-light">
 
+<!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-4">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/">GymApp</a>
-        <div class="collapse navbar-collapse">
+        <a class="navbar-brand" href="{% url 'home' %}">GymApp</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 {% if user.is_authenticated %}
                     <li class="nav-item"><a class="nav-link" href="{% url 'templates' %}">Templates</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'history' %}">History</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Logout</a></li>
+                    <li class="nav-item">
+                        <form action="{% url 'logout' %}" method="post" style="display:inline;">
+                            {% csrf_token %}
+                            <button type="submit" class="nav-link btn btn-link" style="display:inline; padding:0; color:inherit; text-decoration:none;">Logout</button>
+                        </form>
+                    </li>
                 {% else %}
                     <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Login</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'register' %}">Register</a></li>
@@ -25,13 +34,17 @@
     </div>
 </nav>
 
+<!-- Main Content -->
 <div class="container text-center">
     <h1 class="display-4">Welcome to GymApp!</h1>
     <p class="lead">Track your workouts and reach your goals.</p>
+
     {% if user.is_authenticated %}
-        <a href="{% url 'templates' %}" class="btn btn-primary btn-lg">View Templates</a>
+        <a href="{% url 'templates' %}" class="btn btn-primary btn-lg me-2">View Templates</a>
+        <a href="{% url 'history' %}" class="btn btn-secondary btn-lg">View History</a>
     {% else %}
         <a href="{% url 'login' %}" class="btn btn-primary btn-lg">Login to Start</a>
+        <a href="{% url 'register' %}" class="btn btn-secondary btn-lg ms-2">Register</a>
     {% endif %}
 </div>
 
