--- a/workouts/templates/workouts/log_workout.html
+++ b/workouts/templates/workouts/log_workout.html
@@ -14,7 +14,11 @@
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item"><a class="nav-link" href="{% url 'templates' %}">Templates</a></li>
                 <li class="nav-item"><a class="nav-link" href="{% url 'history' %}">History</a></li>
-                <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Logout</a></li>
+                <form action="{% url 'logout' %}" method="post" style="display:inline;">
+                {% csrf_token %}
+                <button type="submit" class="nav-link btn btn-link" style="display:inline; padding:0; color:inherit; text-decoration:none;">Logout</button>
+                </form>
+
             </ul>
         </div>
     </div>
