--- a/workouts/templates/workouts/templates.html
+++ b/workouts/templates/workouts/templates.html
@@ -15,17 +15,20 @@
                 <li class="nav-item"><a class="nav-link" href="{% url 'templates' %}">Templates</a></li>
                 <li class="nav-item"><a class="nav-link" href="{% url 'history' %}">History</a></li>
                 <form action="{% url 'logout' %}" method="post" style="display:inline;">
-                {% csrf_token %}
-                <button type="submit" class="nav-link btn btn-link" style="display:inline; padding:0; color:inherit; text-decoration:none;">Logout</button>
+                    {% csrf_token %}
+                    <button type="submit" class="nav-link btn btn-link" style="display:inline; padding:0; color:inherit; text-decoration:none;">Logout</button>
                 </form>
-
             </ul>
         </div>
     </div>
 </nav>
 
 <div class="container py-5">
-    <h2 class="mb-4">Workout Templates</h2>
+    <div class="d-flex justify-content-between align-items-center mb-4">
+        <h2>Workout Templates</h2>
+        <a href="{% url 'create_template' %}" class="btn btn-success">+ Create New Template</a>
+    </div>
+
     <div class="row">
         {% for template in templates %}
             <div class="col-md-4">
