--- a/workouts/templates/workouts/confirm_delete.html
+++ b/workouts/templates/workouts/confirm_delete.html
@@ -1,1 +1,9 @@
+<h2>Delete Template: {{ template.name }}</h2>
+<p>Are you sure you want to delete this template? This action cannot be undone.</p>
+
+<form method="post">
+    {% csrf_token %}
+    <button type="submit" class="btn btn-danger">Delete</button>
+    <a href="{% url 'templates' %}" class="btn btn-secondary">Cancel</a>
+</form>
 
