--- a/workouts/templates/workouts/edit_template.html
+++ b/workouts/templates/workouts/edit_template.html
@@ -55,12 +55,15 @@
                     </div>
                 </div>
 
+                <!-- Defaults applied if left blank -->
                 <div class="row g-3 mt-2">
                     <div class="col-md-6">
-                        <input type="number" name="form-{{ forloop.counter0 }}-sets" class="form-control" placeholder="Sets (default 3)">
+                        <input type="number" name="form-{{ forloop.counter0 }}-sets" class="form-control"
+                               value="{{ form.sets.value|default:3 }}" min="1" placeholder="Sets (default 3)">
                     </div>
                     <div class="col-md-6">
-                        <input type="number" name="form-{{ forloop.counter0 }}-reps" class="form-control" placeholder="Reps (default 10)">
+                        <input type="number" name="form-{{ forloop.counter0 }}-reps" class="form-control"
+                               value="{{ form.reps.value|default:10 }}" min="1" placeholder="Reps (default 10)">
                     </div>
                 </div>
 
